# smart-farm-common

./: README.md
common/: CMakeLists.txt
common/include/: boot_button_ota_trigger.hpp  button_ota_trigger.hpp  espnow_ota_trigger.hpp  farm_protocol_types.hpp  hal_sleep.hpp  hal_timer.hpp  ota_controller.hpp  sm_hal_timer.hpp
common/include/interfaces/: i_hal_sleep.hpp  i_hal_timer.hpp  i_ota_trigger.hpp  i_sm_hal_timer.hpp
common/src/: boot_button_ota_trigger.cpp  button_ota_trigger.cpp  espnow_ota_trigger.cpp  hal_timer.cpp  ota_controller.cpp  sm_hal_timer.cpp
host_test/common/: mock_i_sm_hal_timer.hpp
host_test/test_nvs_core/: CMakeLists.txt
host_test/test_nvs_core/main/: CMakeLists.txt  test_nvs_core.cpp
nvs_core/: CMakeLists.txt  nvs_core.cpp
nvs_core/include/: core_types.hpp  hal_nvs_core.hpp  nvs_core.hpp
nvs_core/include/interfaces/: i_hal_nvs.hpp  i_nvs_core.hpp
